<resources>
    <string name="app_name">Klotski</string>
    <string name="startgame">Start!</string>
    <string name="choosestage">选择关卡</string>
    <string name="setting">游戏设置</string>
    <string name="aboutgame">关于游戏</string>

    <string name="back">返回</string>
    <string name="next">下一关</string>
    <string name="level_name_1">第一关：横刀立马</string>
    <string name="level_name_2">第二关：层拦叠嶂</string>
    <string name="level_name_3">第三关：层层设防</string>
    <string name="level_name_4">第四关：水泄不通</string>
    <string name="describe">三国华容道是一款基于古老的中国民间益智游戏华容道开发的小游戏，它包括“横刀立马”、“层拦叠嶂”、“层层设防”、“水泄不通”等几个关卡。\n\n
                            相传在公元208年，因为策略失误，曹操的二十万魏国大军在赤壁之战中被五万蜀军击败，曹操带著仅剩的几十个残兵逃亡。罗贯中（约1330–1400）的《三国演义》中的曹操逃亡华容道的故事，在中国是家喻户晓。\n\n
                            据《三国演义》的故事，曹操逃亡的唯一途径是华容道。 但是，蜀军师诸葛亮早已算计到了这一点，并安置关羽在华容道捉曹。曹操被擒，但是曹操以他旧时对关羽的友情，说服关羽放他出逃。 华容道的“战场”是一个长方形的平底盘，大方形滑块代表曹操。\n\n
                            代表曹操的滑块下方的横块代表关羽，其它的八个滑块代表要擒拿曹操的蜀国官兵们，在盒底处的开口代表华容道出口。战局开始时，代表曹操的滑块被其它九个滑块围困在游戏盘的顶端。游戏者的任务是帮助“曹操”从华容道滑脱出去。\n\n
                            开发者：Mikar\n\n</string>
    <string name="level1">level1</string>
    <string name="level2">level2</string>
    <string name="level3">level3</string>
</resources>
