<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CBFF8D1A"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/txt_startgame"
            style="@style/MenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startgame"
            app:fontFamily="sans-serif-black" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CCA5D63F"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/txt_choosestage"
            style="@style/MenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosestage" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CC43CF7C"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/txt_setting"
            style="@style/MenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CC00BAAD"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/txt_aboutgame"
            style="@style/MenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutgame" />
    </android.support.v7.widget.CardView>

</LinearLayout>